--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -162,3 +162,20 @@ section.team-section .avatar img {
 .text-white-90 {
     color: rgba(255, 255, 255, 0.8) !important;
 }
+
+.p-circle:before {
+    content: "";
+    display: inline-block;
+    position: relative;
+    width: 8px;
+    height: 8px;
+    margin-right: 3%;
+    border-radius: 50%;
+    border: 1px solid #aa66cc;
+}
+
+.home-lp p.hide-long-text {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+} 
