--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,3 +37,142 @@
 </mdb-navbar>
 
 <router-outlet></router-outlet>
+
+<footer class="page-footer text-center text-md-left unique-color-dark pt-0">
+
+    <div class="mdb-color darken-3">
+        <div class="container text-md-left">
+            <!--Grid row-->
+            <div class="row py-3 d-flex align-items-center">
+                <ul class="mb-0">
+                    <li class="">
+                        <a target="_blank">
+                            <fa-icon [icon]="['far', 'clock']" [classes]="['footer-icon']"></fa-icon>
+                            <div class="ml-3 d-inline-block">
+                            <h6 class="mb-1 font-weight-bold">7x24</h6>
+                            <p class="mb-0">免费技术支持</p>
+                          </div>   
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank">
+                            <fa-icon [icon]="['fas', 'circle-notch']" [classes]="['footer-icon']"></fa-icon>
+                            <div class="ml-3 d-inline-block">
+                            <h6 class="mb-1 font-weight-bold">OT</h6>
+                            <p class="mb-0">随时可以退订</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank">
+                            <fa-icon [icon]="['fas', 'user-shield']" [classes]="['footer-icon']"></fa-icon>
+                            <div class="ml-3 d-inline-block">
+                            <h6 class="mb-1 font-weight-bold">安全</h6>
+                            <p class="mb-0">持续保护网站安全</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank">
+                            <fa-icon [icon]="['far', 'edit']" [classes]="['footer-icon']"></fa-icon>
+                            <div class="ml-3 d-inline-block">
+                            <h6 class="mb-1 font-weight-bold">意见</h6>
+                            <p class="mb-0">反馈与投诉建议</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a target="_blank">
+                            <fa-icon [icon]="['far', 'gem']" [classes]="['footer-icon']"></fa-icon>
+                            <div class="ml-3 d-inline-block">
+                            <h6 class="mb-1 font-weight-bold">专业服务</h6>
+                            <p class="mb-0">全程技术支持</p>
+                        </div>
+                        </a>
+                    </li>
+                </ul>
+                <!--Grid column-->
+
+            </div>
+            <!--Grid row-->
+        </div>
+    </div>
+
+    <!--Footer Links-->
+    <div class="container mt-5 mb-4 text-center text-md-left">
+        <div class="row mt-3">
+
+            <!--First column-->
+            <div class="col-md-3 col-lg-4 col-xl-3 mb-5">
+                <h6 class="spacing font-weight-bold">
+                    <strong>关于EMicro</strong>
+                </h6>
+                <hr class="secondary-color accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>Dream it. Build it. Live it.</p>
+            </div>
+            <!--/.First column-->
+
+            <!--Second column-->
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-5">
+                <h6 class="spacing font-weight-bold">
+                    <strong>支持与服务</strong>
+                </h6>
+                <hr class="secondary-color accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                    <a href="#">文档</a>
+                </p>
+                <p>
+                    <a href="#">咨询设计</a>
+                </p>
+                <p>
+                    <a href="#">支持计划</a>
+                </p>
+            </div>
+            <!--/.Second column-->
+
+            <!--Third column-->
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-5">
+                <h6 class="spacing font-weight-bold">
+                    <strong>资源与培训</strong>
+                </h6>
+                <hr class="secondary-color accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                    <a href="#">研究中心</a>
+                </p>
+                <p>
+                    <a href="#">备案服务</a>
+                </p>
+                <p>
+                    <a href="#">合作案例</a>
+                </p>
+            </div>
+            <!--/.Third column-->
+
+            <!--Fourth column-->
+            <div class="col-md-4 col-lg-3 col-xl-3">
+                <h6 class="spacing font-weight-bold">
+                    <strong>联系方式</strong>
+                </h6>
+                <hr class="secondary-color accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                <p>
+                    <fa-icon [icon]="['fas', 'home']" class="fas mr-2"></fa-icon>  尚都荟，南京雨花</p>
+                <p>
+                    <fa-icon [icon]="['fas', 'envelope']" class="fas mr-2"></fa-icon> enterprisemicro@outlook.com</p>
+                <p>
+                    <fa-icon [icon]="['fas', 'phone']" rotate="180" class="fas mr-2"></fa-icon> + 96 158 5065 9736</p>
+            </div>
+            <!--/.Fourth column-->
+
+        </div>
+    </div>
+    <!--/.Footer Links-->
+
+    <!-- Copyright-->
+    <div class="footer-copyright text-center py-3">
+        <div class="container-fluid">
+            © 2019 Copyright: <a href="https://www.enterprisemicro.com" target="_blank"> EnterpriseMicro.com </a>
+        </div>
+    </div>
+    <!--/.Copyright -->
+
+</footer>
