--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -288,7 +288,7 @@
         <div class="col-lg-4 col-md-12 mt-5 mb-5">
 
           <!--Card-->
-          <div class="pricing-card card">
+          <div class="pricing-card card hoverable">
 
             <!--Content-->
             <div class="card-body">
@@ -356,7 +356,7 @@
                 </div>
                 <div class="col-9 pl-5">
                   <h4 class="feature-title white-text">自动适应</h4>
-                  <p class="white-text">页面自动响应各种屏幕大小，五站合一
+                  <p class="white-text">页面自动响应各种屏幕大小，三站合一
                   </p>
                 </div>
               </div>
@@ -711,9 +711,7 @@
         <strong>团队伙伴</strong>
       </h3>
       <!-- Section description -->
-      <p class="grey-text w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit,
-        error amet numquam iure provident voluptate
-        esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.
+      <p class="grey-text w-responsive mx-auto mb-5">
       </p>
 
       <div class="row mt-5 pt-5">
@@ -735,7 +733,7 @@
             <div class="card-body">
                 <h5 class="font-weight-bold title">麦迪</h5>
 
-                <p class="font-small grey-text">后端开发工程师</p>
+                <p class="font-small grey-text">网站开发工程师</p>
     
                 <ul class="list-unstyled">
                   <!-- Facebook -->
@@ -774,7 +772,7 @@
             <div class="card-body">
                 <h5 class="font-weight-bold title">Penny</h5>
 
-                <p class="font-small grey-text">图形设计师</p>
+                <p class="font-small grey-text">视觉设计师</p>
     
                 <ul class="list-unstyled">
                   <!-- weixin -->
@@ -844,110 +842,6 @@
 
     </section>
     <!-- Section: Team v.1 -->
-
-  </div>
-  <div class="container">
-    <section id="contact" class="section text-center my-5">
-
-      <!-- Section heading -->
-      <h3 class="text-center title my-5 dark-grey-text font-weight-bold wow fadeIn" data-wow-delay="0.2s"
-        style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">
-        <strong>Contact us</strong>
-      </h3>
-
-      <!-- Section sescription -->
-      <p class="grey-text w-responsive mx-auto mb-5 wow fadeIn" data-wow-delay="0.2s"
-        style="visibility: visible; animation-name: fadeIn; animation-delay: 0.2s;">Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate
-        esse quasi, veritatis totam voluptas nostrum quisquam eum porro a pariatur accusamus veniam.
-      </p>
-
-      <div class="row wow fadeIn" data-wow-delay="0.4s"
-        style="visibility: visible; animation-name: fadeIn; animation-delay: 0.4s;">
-
-        <!-- Grid column -->
-        <div class="col-md-8 col-lg-9">
-          <form>
-            <!-- Grid row -->
-            <div class="row">
-              <!-- Grid column -->
-              <div class="col-md-6">
-                <div class="md-form mb-0">
-                  <div class="md-form mb-0">
-                    <input type="text" id="form41" class="form-control">
-                    <label for="form41" class="">Your name</label>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Grid column -->
-              <div class="col-md-6">
-                <div class="md-form mb-0">
-                  <div class="md-form mb-0">
-                    <input type="text" id="form52" class="form-control">
-                    <label for="form52" class="">Your email</label>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Grid row -->
-
-            <!-- Grid row -->
-            <div class="row">
-              <div class="col-md-12">
-                <div class="md-form mb-0">
-                  <input type="text" id="form51" class="form-control">
-                  <label for="form51" class="">Subject</label>
-                </div>
-              </div>
-            </div>
-            <!-- Grid row -->
-
-            <!-- Grid row -->
-            <div class="row">
-              <!-- Grid column -->
-              <div class="col-md-12">
-
-                <div class="md-form mb-0">
-                  <textarea type="text" id="form76" class="md-textarea form-control" rows="3"></textarea>
-                  <label for="form76">Your message</label>
-                </div>
-
-              </div>
-            </div>
-            <!-- Grid row -->
-          </form>
-
-          <div class="text-center text-md-left mb-5 mt-4">
-            <a class="btn btn-rounded btn-secondary font-weight-bold waves-effect waves-light">Send</a>
-          </div>
-        </div>
-        <!-- Grid column -->
-
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3">
-          <ul class="list-unstyled contact-icons float-md-right">
-            <li>
-              <fa-icon [icon]="['fas', 'map-marker-alt']" class="title fa-2x"></fa-icon>
-              <p>世茂52+，南京雨花</p>
-            </li>
-
-            <li>
-              <fa-icon [icon]="['fas', 'phone']" class="title fa-2x"></fa-icon>
-              <p>+86 158 5065 9736</p>
-            </li>
-
-            <li>
-              <fa-icon [icon]="['fas', 'envelope']" class="title fa-2x"></fa-icon>
-              <p>enterprisemicro@outlook.com</p>
-            </li>
-          </ul>
-        </div>
-        <!-- Grid column -->
-
-      </div>
-    </section>
-    <!-- Section: Contact v.2 -->
 
   </div>
 </main>
