--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,3 +90,8 @@ header,
 .home-lp .mat-stepper-horizontal {
   background-color: inherit;
 }
+
+.page-footer .footer-icon {
+  width: 40px;
+  height: 40px;
+}
