--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <mdb-navbar SideClass="navbar fixed-top navbar-expand-lg navbar-dark secondary-color scrolling-navbar">
   <mdb-navbar-brand>
-    <a class="navbar-brand" href="#"><img src="assets/img/Em3.png" height="30" class="d-inline-block align-top" alt=""></a>
+    <a class="navbar-brand" href="#"><img src="assets/img/Em4.png" height="30" class="d-inline-block align-top" alt=""></a>
   </mdb-navbar-brand>
   <!-- Collapsible content -->
   <links>
@@ -38,9 +38,9 @@
 
 <router-outlet></router-outlet>
 
-<footer class="page-footer text-center text-md-left unique-color-dark pt-0">
+<footer class="page-footer text-center text-md-left stylish-color-dark pt-0">
 
-    <div class="mdb-color darken-3">
+    <div class="">
         <div class="container text-md-left">
             <!--Grid row-->
             <div class="row py-3 d-flex align-items-center">
@@ -97,7 +97,7 @@
             <!--Grid row-->
         </div>
     </div>
-
+    <hr class="clearfix w-100">
     <!--Footer Links-->
     <div class="container mt-5 mb-4 text-center text-md-left">
         <div class="row mt-3">
@@ -155,11 +155,11 @@
                 </h6>
                 <hr class="secondary-color accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <fa-icon [icon]="['fas', 'home']" class="fas mr-2"></fa-icon>  尚都荟，南京雨花</p>
+                    <fa-icon [icon]="['fas', 'home']" class="fas mr-2"></fa-icon>证大喜马拉雅，南京雨花</p>
                 <p>
-                    <fa-icon [icon]="['fas', 'envelope']" class="fas mr-2"></fa-icon> enterprisemicro@outlook.com</p>
+                    <fa-icon [icon]="['fas', 'envelope']" class="fas mr-2"></fa-icon>enterprisemicro@outlook.com</p>
                 <p>
-                    <fa-icon [icon]="['fas', 'phone']" rotate="180" class="fas mr-2"></fa-icon> + 96 158 5065 9736</p>
+                    <fa-icon [icon]="['fas', 'phone']" rotate="180" class="fas mr-2"></fa-icon>+ 96 158 5065 9736</p>
             </div>
             <!--/.Fourth column-->
 
@@ -170,7 +170,7 @@
     <!-- Copyright-->
     <div class="footer-copyright text-center py-3">
         <div class="container-fluid">
-            © 2019 Copyright: <a href="https://www.enterprisemicro.com" target="_blank"> EnterpriseMicro.com </a>
+            © 2019 版权所有 <a href="https://www.enterprisemicro.com" target="_blank">企微网</a>
         </div>
     </div>
     <!--/.Copyright -->
