--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -727,7 +727,7 @@
 
             <!--Avatar-->
             <div class="avatar mx-auto white">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg" class="rounded-circle img-responsive">
+              <img src="assets/img/em-06.jpg" class="rounded-circle img-responsive">
             </div>
 
             <div class="card-body">
@@ -765,7 +765,7 @@
 
             <!--Avatar-->
             <div class="avatar mx-auto white">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg"
+              <img src="assets/img/em-07.jpg"
                 class="rounded-circle img-responsive">
             </div>
 
@@ -807,7 +807,7 @@
 
             <!--Avatar-->
             <div class="avatar mx-auto white">
-              <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg"
+              <img src="assets/img/em-08.jpg"
                 class="rounded-circle img-responsive">
             </div>
 
