--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,10 @@
           <div class="col-md-12 white-text text-center">
             <div class="wow fadeInDown" data-wow-delay="0.2s"
               style="visibility: visible; animation-name: fadeInDown; animation-delay: 0.2s;">
-              <h2 class="display-3 font-weight-bold mb-2">一栈式Web方案</h2>
+              <h2 class="display-3 font-weight-bold mb-2">一站式网站解决方案</h2>
               <hr class="hr-light">
-              <h3 class="subtext-header mt-4 mb-5">提供各种Web SaaS服务，轻松应对各类Web使用难题</h3>
+              <h3 class="subtext-header mt-4 mb-5">沉淀各领域业务场景，结合团队成员技术能力，依托云服务，提供最合适的架构方案
+              </h3>
             </div>
             <a [ngx-scroll-to]="'#events'"
               class="btn btn-white text-secondary btn-rounded font-weight-bold wow fadeInLeft waves-effect waves-light"
