--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@
                           </div>   
                         </a>
                     </li>
-                    <li>
+                    <li class="">
                         <a target="_blank">
                             <fa-icon [icon]="['fas', 'circle-notch']" [classes]="['footer-icon']"></fa-icon>
                             <div class="ml-3 d-inline-block">
@@ -63,25 +63,25 @@
                         </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="">
                         <a target="_blank">
                             <fa-icon [icon]="['fas', 'user-shield']" [classes]="['footer-icon']"></fa-icon>
                             <div class="ml-3 d-inline-block">
                             <h6 class="mb-1 font-weight-bold">安全</h6>
-                            <p class="mb-0">持续保护网站安全</p>
+                            <p class="mb-0">持续保护网站</p>
                         </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="">
                         <a target="_blank">
                             <fa-icon [icon]="['far', 'edit']" [classes]="['footer-icon']"></fa-icon>
                             <div class="ml-3 d-inline-block">
                             <h6 class="mb-1 font-weight-bold">意见</h6>
-                            <p class="mb-0">反馈与投诉建议</p>
+                            <p class="mb-0">反馈投诉建议</p>
                         </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="">
                         <a target="_blank">
                             <fa-icon [icon]="['far', 'gem']" [classes]="['footer-icon']"></fa-icon>
                             <div class="ml-3 d-inline-block">
@@ -105,7 +105,7 @@
             <!--First column-->
             <div class="col-md-3 col-lg-4 col-xl-3 mb-5">
                 <h6 class="spacing font-weight-bold">
-                    <strong>关于EMicro</strong>
+                    <strong>关于企微网</strong>
                 </h6>
                 <hr class="secondary-color accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>Dream it. Build it. Live it.</p>
